fixed articles image overlaping navbar

--- a/css/style.css
+++ b/css/style.css
@@ -169,10 +169,6 @@ h4 {
     animation: animate-preloader 1.5s linear infinite;
 }
 
-.header-spacer {
-    height: 80px;
-}
-
 hr {
     position: fixed;
     background-color: yellow;
@@ -211,6 +207,10 @@ hr {
 }
 
 /*====== Header =======*/
+.header-spacer {
+    height: 80px;
+}
+
 #top-bar {
     border-bottom: 1px solid rgb(180, 180, 180);
     /* color: var(--segundo); */
@@ -221,7 +221,7 @@ hr {
     position: fixed;
     width: 100%;
     background-color: white;
-    z-index: 1;
+    z-index: 2;
 }
 
 .navbar {
@@ -615,12 +615,12 @@ figure img {
     font-size: 3rem;
 }
 
-#articles .card img {
+/* #articles .card img {
     position: relative;
     z-index: 1;
-}
+} */
 
-#articles .card img::after {
+/* #articles .card img::after {
     content: "Hello";
     font-size: 3.4rem;
     position: absolute;
@@ -631,11 +631,49 @@ figure img {
     background-color: rgba(0, 0, 0, 0.833);
     z-index: 100;
 
+} */
+.img-container {
+    position: relative;
+    width: 100%;
+    padding-top: 26.25%;
+    height: 0;
+    /* set the height of the parent container based on the aspect ratio of the image */
+}
+
+.img-container img {
+    /* display: block;
+    width: 100%;
+    height: auto; */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: grey;
+    /* set the color and opacity of the overlay */
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
+    /* add a transition for opacity */
 }
 
 #articles a:hover h3 {
     color: blue;
     text-decoration: underline;
+    transition: all 0.2s ease-in-out;
+}
+
+#articles a:hover .overlay {
+    opacity: 0.3;
 }
 
 /*============== Map ===============*/
